Backend: endpoints partially updated
