# backend/docs/swagger.json
@@ -309,7 +309,7 @@
                 }
             }
         },
-        "/service": {
+        "/schema/{service_id}/endpoint": {
             "post": {
                 "security": [
                     {
@@ -323,70 +323,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "service"
-                ],
-                "summary": "create new service inside of project",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "access token 'Bearer {token}'",
-                        "name": "Authorization",
-                        "in": "header",
-                        "required": true
-                    },
-                    {
-                        "description": "body",
-                        "name": "RequestBody",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/dto.ServiceCreate"
-                        }
-                    }
-                ],
-                "responses": {
-                    "201": {
-                        "description": "Created",
-                        "schema": {
-                            "$ref": "#/definitions/dto.OkResponse"
-                        }
-                    },
-                    "400": {
-                        "description": "Bad Request",
-                        "schema": {
-                            "$ref": "#/definitions/dto.HttpErr"
-                        }
-                    },
-                    "401": {
-                        "description": "Unauthorized",
-                        "schema": {
-                            "$ref": "#/definitions/dto.HttpErr"
-                        }
-                    },
-                    "403": {
-                        "description": "Forbidden",
-                        "schema": {
-                            "$ref": "#/definitions/dto.HttpErr"
-                        }
-                    }
-                }
-            }
-        },
-        "/service/{service_id}/endpoint": {
-            "post": {
-                "security": [
-                    {
-                        "Bearer": []
-                    }
-                ],
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "service"
+                    "endpoint"
                 ],
                 "summary": "create new endpoint inside of service",
                 "parameters": [
@@ -442,7 +379,7 @@
                 }
             }
         },
-        "/service/{service_id}/endpoint/{endpoint_id}/assign/{username}": {
+        "/schema/{service_id}/endpoint/{endpoint_id}/assign/{username}": {
             "post": {
                 "security": [
                     {
@@ -456,7 +393,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "service"
+                    "endpoint"
                 ],
                 "summary": "assign endpoint to contributor",
                 "parameters": [
@@ -487,6 +424,69 @@
                         "name": "username",
                         "in": "path",
                         "required": true
+                    }
+                ],
+                "responses": {
+                    "201": {
+                        "description": "Created",
+                        "schema": {
+                            "$ref": "#/definitions/dto.OkResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/dto.HttpErr"
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "$ref": "#/definitions/dto.HttpErr"
+                        }
+                    },
+                    "403": {
+                        "description": "Forbidden",
+                        "schema": {
+                            "$ref": "#/definitions/dto.HttpErr"
+                        }
+                    }
+                }
+            }
+        },
+        "/shema": {
+            "post": {
+                "security": [
+                    {
+                        "Bearer": []
+                    }
+                ],
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "endpoint"
+                ],
+                "summary": "create new service inside of project",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "access token 'Bearer {token}'",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    },
+                    {
+                        "description": "schema body",
+                        "name": "RequestBody",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/dto.SchemaCreate"
+                        }
                     }
                 ],
                 "responses": {
@@ -580,6 +580,13 @@
                         "name": "Authorization",
                         "in": "header",
                         "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "Project Id",
+                        "name": "project_id",
+                        "in": "path",
+                        "required": true
                     }
                 ],
                 "responses": {
@@ -621,6 +628,20 @@
                         "description": "access token 'Bearer {token}'",
                         "name": "Authorization",
                         "in": "header",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "Project Id",
+                        "name": "project_id",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "Endpoint Id",
+                        "name": "endpoint_id",
+                        "in": "path",
                         "required": true
                     }
                 ],
@@ -695,10 +716,6 @@
                 "description": {
                     "type": "string",
                     "example": "creates new user and return access token"
-                },
-                "details": {
-                    "type": "object",
-                    "additionalProperties": {}
                 },
                 "method": {
                     "type": "string",
@@ -810,21 +827,33 @@
                 }
             }
         },
-        "dto.ServiceCreate": {
+        "dto.SchemaCreate": {
             "type": "object",
             "required": [
+                "details",
                 "name",
                 "project_id"
             ],
             "properties": {
+                "details": {
+                    "type": "object",
+                    "additionalProperties": {}
+                },
                 "name": {
                     "type": "string",
                     "example": "user"
+                },
+                "needs_auth": {
+                    "type": "boolean",
+                    "example": false
                 },
                 "project_id": {
                     "type": "string",
                     "format": "uuid",
                     "example": "550e8400-e29b-41d4-a716-446655440000"
+                },
+                "service_tag": {
+                    "type": "string"
                 }
             }
         },
